--- a/YourCake02.html
+++ b/YourCake02.html
@@ -34,7 +34,7 @@
         Depois de derreter coloque o creme de leite e o leite condensado e misture,coloque o chocolate na geladeira durante 20 minutos quando der 10 minutos  tire da geladeira e dê uma mexidinha e coloque por mais 10 minutos depois retire da geladeira e jogue em cima do bolo.
         <div class="bom">Bom Apetite!</div><br><br>
         <div class="link">
-        <a href="YourCake.html">Voltar</a>
+        <a href="YourCake01.html">Voltar</a>
         
         </div>
         <div class="link2"><a href="YourCake03.html">Página 3</a></div>
