--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         Coloque o leite o creme de leite o chocolate em pó o açucar e a manteiga em uma panela , cozinhe em fogo médio quando levantar fervura espere 1 minutinho e desligue ,corte o bolo em xadrez  em linha verticais e horizontais despeje a calda quente e a cobertura em cima despeje granulado.<br><br>
         <div class="bom">Bom Apetite!</div><br>
         <div class="link">
-        <a href="YourCake02.html">Página 2</a>
+        <a href="index02.html">Página 2</a>
         </div>
        
 
