--- a/index03.html
+++ b/index03.html
@@ -68,7 +68,7 @@
         Coloque em uma vasilha os ovos e o açucar bata por três minutos se não quiser bater a mão bata na velocidade mínima da batedeira,coloque o óleo e bata por mais 1 minuto, peneire a farinha de trigo o fubá e o fermento em pó depois coloque na vasilha e mexa por um minuto,coloque o leite quente e misture por um minuto,coloque a massa na assadeira untada com manteiga e farinha de trigo leve ao forno aquecido á 170 graus no Máximo 180 graus e deixe assar por uma hora deixe esfriar por um tempo depois desenforme.<br>
         <div class="bom">Bom Apetite!</div><br><br>
         <div class="link">
-            <a href="YourCake02.html">Voltar</a>
+            <a href="index02.html">Voltar</a>
         </div>
 
 
