--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="bolo">
 
             <h1>Receita de Bolo de Chocolate</h1>
-            Se usar xícara medidora usa a padrão 240 ml ou siga os pesos
+            Se usar xícara medidora use a padrão 240 ml ou siga os pesos
             <h2>Massa</h2>
             4 ovos<br>
             1 e 1/2 xícara de chá de açucar (250gr)<br>
