--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Receitas de Bolos </title>
     <style>
           body{
+            height: 100%;
+            width:100%;
             background-image: url(imagem/boloc.jpg);
     
         }
