--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>modo de preparo da cobertura</h2>
         Coloque o leite condensado o chocolate em pó a manteiga e o creme de leite de caixinha em uma panela cozinhe em fogo alto até ele atingir a consistência de brigadeiro mole,assim que ele levantar fervura conte 2 minutos e desligue
         <h2>Modo de Preparo da Calda Extra de Chocolate</h2>
-        Coloque o leite o creme de leite o chocolate em pó o açucar e a manteiga em uma panela , cozinhe em fogo médio quando levantar fervura espere 1 minutinho e desligue ,corte o bolo em xadrez  em linha verticais e horizontais despeje a calda quente e a cobertura em cima despeje granulado.<br><br>
+        Coloque o leite o creme de leite o chocolate em pó o açucar e a manteiga em uma panela , cozinhe em fogo médio quando levantar fervura espere 1 minutinho e desligue ,corte o bolo em xadrez  em linha verticais e horizontais despeje a calda quente e a cobertura em cima despeje granulado.<br><br><br>
         <div class="bom">Bom Apetite!</div><br>
         <div class="link">
         <a href="index02.html">Página 2</a>
