--- a/index02.html
+++ b/index02.html
@@ -31,7 +31,7 @@
         Derreta o chocolate em banho maria ou no micro-ondas
         Se for usar o banho maria coloque a vasilha em uma água quase quentinha
         e mexa, se for usar o micro-ondas coloque de 2 a 3 vezes durante 30 segundos e mexa a cada vez que ele fica super bem.
-        Depois de derreter coloque o creme de leite e o leite condensado e misture,coloque o chocolate na geladeira durante 20 minutos quando der 10 minutos  tire da geladeira e dê uma mexidinha e coloque por mais 10 minutos depois retire da geladeira e jogue em cima do bolo.
+        Depois de derreter coloque o creme de leite e o leite condensado e misture,coloque o chocolate na geladeira durante 20 minutos quando der 10 minutos  tire da geladeira e dê uma mexidinha e coloque por mais 10 minutos depois retire da geladeira e jogue em cima do bolo.<br><br>
         <div class="bom">Bom Apetite!</div><br><br>
         <div class="link">
         <a href="index.html">Voltar</a>
