--- a/index03.html
+++ b/index03.html
@@ -11,6 +11,7 @@
             background-size:500px;
         }
         .cont{
+            margin-top:0px;
             height: 900px;
             width:800px;
             background-color: white;
@@ -66,7 +67,7 @@
         1 xícara de chá de leite quente 210 ml<br>
         <h2>Modo de Preparo</h2>
         Coloque em uma vasilha os ovos e o açucar bata por três minutos se não quiser bater a mão bata na velocidade mínima da batedeira,coloque o óleo e bata por mais 1 minuto, peneire a farinha de trigo o fubá e o fermento em pó depois coloque na vasilha e mexa por um minuto,coloque o leite quente e misture por um minuto,coloque a massa na assadeira untada com manteiga e farinha de trigo leve ao forno aquecido á 170 graus no Máximo 180 graus e deixe assar por uma hora deixe esfriar por um tempo depois desenforme.<br><br>
-        <div class="bom">Bom Apetite!</div><br><br>
+        <div class="bom">Bom Apetite!</div><br>
         <div class="link">
             <a href="index02.html">Voltar</a>
         </div>
