--- a/index03.html
+++ b/index03.html
@@ -11,8 +11,8 @@
             background-size:500px;
         }
         .cont{
-            margin-top:0px;
-            height: 900px;
+            
+            height: 100%;
             width:800px;
             background-color: white;
             margin: auto;
