--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .bolo{
             height: 100%;
-            width: 900px;
+            width: 60%;
             background-color:white;
             font-size: 17pt;
            
