--- a/index03.html
+++ b/index03.html
@@ -9,11 +9,12 @@
             font-size: 15px;
             background-image: url(imagem/bolof.jpg);
             background-size:500px;
+            background-attachment: fixed;
         }
         .cont{
             
             height: 100%;
-            width:800px;
+            width:50%;
             background-color: white;
             margin: auto;
             padding: 20px;
