--- a/index03.html
+++ b/index03.html
@@ -18,6 +18,7 @@
             background-color: white;
             margin: auto;
             padding: 20px;
+            border-radius: 9px;
         
         }
         .cont h1,h2 {
