--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         }
         .bolo{
             height: 100%;
-            width: 80%;
+            width: 60%;
             background-color:white;
             font-size: 17pt;
-           
+           border-radius: 9px;
             margin: auto;
             padding:30px;
         }
