--- a/index02.html
+++ b/index02.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="tit">YourCake</h1>
-    <div class="bolo">
+    <div class="main">
         <h1>Bolo de Cenoura</h1>
         A minha minha xìcara tem 210 ml<br>
         <h2>Ingrediente da Massa</h2>
@@ -34,10 +34,8 @@
         Depois de derreter coloque o creme de leite e o leite condensado e misture,coloque o chocolate na geladeira durante 20 minutos quando der 10 minutos  tire da geladeira e dê uma mexidinha e coloque por mais 10 minutos depois retire da geladeira e jogue em cima do bolo.<br><br>
         <div class="bom">Bom Apetite!</div><br><br>
         <div class="link">
-        <a href="index.html">Voltar</a>
-        
-        </div>
-        <div class="link2"><a href="index03.html">Página 3</a></div>
+        <a href="index.html">Página 1</a>
+        <a href="index03.html">Página 3</a></div>
 
 
 
