--- a/index03.html
+++ b/index03.html
@@ -36,8 +36,7 @@
             margin:auto;
             width:400px;
             border-radius:10px;
-            position: relative;
-            margin-left:36%;
+            margin:auto;
             margin-top:-45px;
             text-align: center;
      
@@ -65,7 +64,7 @@
         }
     </style>
 </head>
-<body><
+<body>
     <div class="tit">
         <h1>YourCake</h1>
     </div>
