--- a/index04.html
+++ b/index04.html
@@ -30,8 +30,7 @@
             margin:auto;
             width:400px;
             border-radius:10px;
-            position: relative;
-            margin-left:36%;
+            margin:auto;
             margin-top:-45px;
             text-align: center;
      
