--- a/index05.html
+++ b/index05.html
@@ -12,7 +12,7 @@
         }
         .main{
           height:100%;
-          width:60%;
+          width:90%;
           background-color:white;
           margin:auto;
           padding:28px;
@@ -30,8 +30,7 @@
             margin:auto;
             width:400px;
             border-radius:10px;
-            position: relative;
-            margin-left:36%;
+            margin:auto;
             margin-top:-45px;
             text-align: center;
      
