--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-be">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +21,7 @@
             margin:auto;
             width:400px;
             border-radius:10px;
-            position: relative;
-            margin-left:36%;
+            margin:auto;
             margin-top:-45px;
             text-align: center;
      
@@ -31,7 +30,7 @@
         }
         .main{
             height: 100%;
-            width: 80%;
+            width: 90%;
             background-color:white;
             font-size: 20pt;
             border-radius: 9px;
